src/parser/snapshots/coconut__parser__literal__tests__array_lit_with_trailing_comma.snap
---
source: src/parser/literal.rs
expression: "array_lit(\"[ true, true, ]\\n\".into()).unwrap().1"
---
{
  "type": "ArrayExpression",
  "elements": [
    {
      "type": "Literal",
      "value": true,
      "start": 2,
      "end": 6
    },
    {
      "type": "Literal",
      "value": true,
      "start": 8,
      "end": 12
    }
  ],
  "start": 0,
  "end": 15
}
