src/parser/snapshots/coconut__parser__literal__tests__obj_lit-4.snap
---
source: src/parser/literal.rs
expression: "parse_literal(r#\"{ }\"#.into()).unwrap().1"
---
{
  "type": "ObjectExpression",
  "properties": [],
  "start": 0,
  "end": 3
}
