src/parser/snapshots/coconut__parser__literal__tests__obj_lit-6.snap
---
source: src/parser/literal.rs
expression: "parse_literal(r#\"{\n                    get: function () {\n                        return {};\n                    }\n                }\"#.into()).unwrap().1"
---
{
  "type": "ObjectExpression",
  "properties": [
    {
      "type": "Property",
      "key": {
        "type": "Identifier",
        "name": "get",
        "start": 22,
        "end": 25
      },
      "value": {
        "type": "FunctionExpression",
        "id": null,
        "params": [],
        "body": {
          "type": "BlockStatement",
          "body": [
            {
              "type": "ReturnStatement",
              "argument": {
                "type": "ObjectExpression",
                "properties": [],
                "start": 72,
                "end": 74
              },
              "start": 65,
              "end": 75
            }
          ],
          "start": 39,
          "end": 97
        },
        "start": 27,
        "end": 97
      },
      "kind": "init",
      "start": 22,
      "end": 97
    }
  ],
  "start": 0,
  "end": 115
}
